// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabItem component tests active: label 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        {
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
        },
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "color": "#000000",
          },
          false,
          false,
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests active: label, badge 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        {
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
        },
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "color": "#000000",
          },
          false,
          false,
        ]
      }
    >
      label
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#44e858",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          99
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            99
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TabItem component tests active: label, icon 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        {
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
        },
        false,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={17.5}
      bbWidth={17.5}
      fill="none"
      focusable={false}
      height={17.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#000000"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 17,
            "width": 17,
          },
        ]
      }
      testID="SvgUniversalComponent"
      vbHeight={24}
      vbWidth={24}
      width={17.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "color": "#000000",
          },
          false,
          false,
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests active: label, icon, badge 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        {
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
        },
        false,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={17.5}
      bbWidth={17.5}
      fill="none"
      focusable={false}
      height={17.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#000000"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 17,
            "width": 17,
          },
        ]
      }
      testID="SvgUniversalComponent"
      vbHeight={24}
      vbWidth={24}
      width={17.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "color": "#000000",
          },
          false,
          false,
        ]
      }
    >
      label
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#44e858",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          99
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            99
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TabItem component tests disabled + active : label 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        {
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
        },
        {
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "color": "#000000",
          },
          false,
          {
            "color": "#85888e",
          },
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests disabled: label 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        {
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          {
            "color": "#85888e",
          },
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests disabled: label, badge 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        {
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          {
            "color": "#85888e",
          },
        ]
      }
    >
      label
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#44e858",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          99
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            99
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TabItem component tests disabled: label, icon 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        {
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={17.5}
      bbWidth={17.5}
      fill="none"
      focusable={false}
      height={17.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#85888e"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 17,
            "width": 17,
          },
        ]
      }
      testID="SvgUniversalComponent"
      vbHeight={24}
      vbWidth={24}
      width={17.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          {
            "color": "#85888e",
          },
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests disabled: label, icon, badge 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        {
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={17.5}
      bbWidth={17.5}
      fill="none"
      focusable={false}
      height={17.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#85888e"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 17,
            "width": 17,
          },
        ]
      }
      testID="SvgUniversalComponent"
      vbHeight={24}
      vbWidth={24}
      width={17.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          {
            "color": "#85888e",
          },
        ]
      }
    >
      label
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#44e858",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          99
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            99
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TabItem component tests label 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          false,
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests label, badge 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          false,
        ]
      }
    >
      label
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#44e858",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          99
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            99
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TabItem component tests label, icon 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        false,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={17.5}
      bbWidth={17.5}
      fill="none"
      focusable={false}
      height={17.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#85888e"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 17,
            "width": 17,
          },
        ]
      }
      testID="SvgUniversalComponent"
      vbHeight={24}
      vbWidth={24}
      width={17.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          false,
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`TabItem component tests label, icon, badge 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="TabItem_Container0"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          "flexDirection": "row",
          "gap": 7,
          "height": 49,
          "paddingHorizontal": 0,
          "paddingVertical": 14,
        },
        false,
        false,
        false,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={17.5}
      bbWidth={17.5}
      fill="none"
      focusable={false}
      height={17.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#85888e"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 17,
            "width": 17,
          },
        ]
      }
      testID="SvgUniversalComponent"
      vbHeight={24}
      vbWidth={24}
      width={17.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="SvgUniversalComponent"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#85888e",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          false,
          false,
          false,
        ]
      }
    >
      label
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#44e858",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          99
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            99
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TabPanel component tests activeIndex !== index 1`] = `null`;

exports[`TabPanel component tests activeIndex === index 1`] = `
<View>
  <Text>
    Content
  </Text>
</View>
`;

exports[`Tabs component tests disabled 1`] = `
<View
  style={
    {
      "borderBottomWidth": 1,
      "borderColor": "#e2e2e4",
      "flexDirection": "row",
      "gap": 21,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="TabItem_Container0"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
            "flexDirection": "row",
            "gap": 7,
            "height": 49,
            "paddingHorizontal": 0,
            "paddingVertical": 14,
          },
          false,
          {
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          },
          {
            "mixBlendMode": "luminosity",
            "opacity": 0.6,
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={17.5}
        bbWidth={17.5}
        fill="none"
        focusable={false}
        height={17.5}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#85888e"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 17,
              "width": 17,
            },
          ]
        }
        testID="SvgUniversalComponent"
        vbHeight={24}
        vbWidth={24}
        width={17.5}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4286941326,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="SvgUniversalComponent"
          />
          <RNSVGPath
            d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4286941326,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="SvgUniversalComponent"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#85888e",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            },
            {
              "color": "#000000",
            },
            false,
            {
              "color": "#85888e",
            },
          ]
        }
      >
        First Tab
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="TabItem_Container1"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
            "flexDirection": "row",
            "gap": 7,
            "height": 49,
            "paddingHorizontal": 0,
            "paddingVertical": 14,
          },
          false,
          false,
          {
            "mixBlendMode": "luminosity",
            "opacity": 0.6,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#85888e",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            },
            false,
            false,
            {
              "color": "#85888e",
            },
          ]
        }
      >
        Second Tab
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="TabItem_Container2"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
            "flexDirection": "row",
            "gap": 7,
            "height": 49,
            "paddingHorizontal": 0,
            "paddingVertical": 14,
          },
          false,
          false,
          {
            "mixBlendMode": "luminosity",
            "opacity": 0.6,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#85888e",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            },
            false,
            false,
            {
              "color": "#85888e",
            },
          ]
        }
      >
        Third Tab
      </Text>
      <View
        style={
          [
            {
              "alignItems": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 100,
                "height": 21,
                "justifyContent": "center",
                "paddingHorizontal": 7,
              },
              {
                "backgroundColor": "#fbacaa",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#000000",
                  "fontFamily": "TT Fellows",
                  "fontSize": 10.5,
                  "includeFontPadding": false,
                  "verticalAlign": "middle",
                },
                {
                  "minWidth": undefined,
                },
              ]
            }
          >
            0
          </Text>
        </View>
        <View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            {
              "flexDirection": "row",
              "height": 0,
              "position": "absolute",
              "width": 750,
            }
          }
        >
          <View
            collapsable={false}
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "color": "#000000",
                  "fontFamily": "TT Fellows",
                  "fontSize": 10.5,
                  "includeFontPadding": false,
                  "verticalAlign": "middle",
                }
              }
            >
              0
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 0,
          "width": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#181a1f",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#181a1f",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
        },
        {
          "left": 0,
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Tabs component tests normal 1`] = `
<View
  style={
    {
      "borderBottomWidth": 1,
      "borderColor": "#e2e2e4",
      "flexDirection": "row",
      "gap": 21,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="TabItem_Container0"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
            "flexDirection": "row",
            "gap": 7,
            "height": 49,
            "paddingHorizontal": 0,
            "paddingVertical": 14,
          },
          false,
          {
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
          },
          false,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={17.5}
        bbWidth={17.5}
        fill="none"
        focusable={false}
        height={17.5}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#000000"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 17,
              "width": 17,
            },
          ]
        }
        testID="SvgUniversalComponent"
        vbHeight={24}
        vbWidth={24}
        width={17.5}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="SvgUniversalComponent"
          />
          <RNSVGPath
            d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="SvgUniversalComponent"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#85888e",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            },
            {
              "color": "#000000",
            },
            false,
            false,
          ]
        }
      >
        First Tab
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="TabItem_Container1"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
            "flexDirection": "row",
            "gap": 7,
            "height": 49,
            "paddingHorizontal": 0,
            "paddingVertical": 14,
          },
          false,
          false,
          false,
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#85888e",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            },
            false,
            false,
            false,
          ]
        }
      >
        Second Tab
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="TabItem_Container2"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.0001)",
            "flexDirection": "row",
            "gap": 7,
            "height": 49,
            "paddingHorizontal": 0,
            "paddingVertical": 14,
          },
          false,
          false,
          false,
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#85888e",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            },
            false,
            false,
            false,
          ]
        }
      >
        Third Tab
      </Text>
      <View
        style={
          [
            {
              "alignItems": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 100,
                "height": 21,
                "justifyContent": "center",
                "paddingHorizontal": 7,
              },
              {
                "backgroundColor": "#fbacaa",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#000000",
                  "fontFamily": "TT Fellows",
                  "fontSize": 10.5,
                  "includeFontPadding": false,
                  "verticalAlign": "middle",
                },
                {
                  "minWidth": undefined,
                },
              ]
            }
          >
            0
          </Text>
        </View>
        <View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            {
              "flexDirection": "row",
              "height": 0,
              "position": "absolute",
              "width": 750,
            }
          }
        >
          <View
            collapsable={false}
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "color": "#000000",
                  "fontFamily": "TT Fellows",
                  "fontSize": 10.5,
                  "includeFontPadding": false,
                  "verticalAlign": "middle",
                }
              }
            >
              0
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 0,
          "width": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#181a1f",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#181a1f",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
        },
        {
          "left": 0,
          "width": 0,
        },
      ]
    }
  />
</View>
`;
